--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,56 @@ a {
 * {
   box-sizing: border-box;
 }
+
+nav {
+  margin: 10px auto 88px;
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  border-bottom: 1px solid #ddd;
+  background-color: darkgray;
+  font-size: large;
+}
+
+nav a{
+  margin-left: 12px;
+  margin-right: 12px;
+  font-size: 18px;
+}
+
+nav .navbar {
+  margin-right: auto;
+}
+
+nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+footer {
+  display: block;
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 60px;
+  color: #777;
+  border-top: 1px solid #eaeaea;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.gallery .card {
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  margin: 1vw 1vh 1vw 1vh;
+  text-align: center;
+  font-weight: bold;
+}
+
+.gallery .card a:hover{
+  background-color: #ddd;
+  color: black;
+}
